--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -15,22 +15,23 @@ getrandom = {version = "0.2", features = ["js"]}
 serde = {version = "1", features = ["derive"]}
 serde_json = "1"
 thiserror = "1"
-curv-kzen = {version = "0.9", features = ["num-bigint"], default-features = false}
 log = "0.4"
 wasm-log = "0.3"
 hex = "0.4"
 
-[dependencies.paillier]
-version = "0.4.2"
-package = "kzen-paillier"
+[dependencies.curv-kzen]
+version = "0.10"
+features = ["num-bigint"]
 default-features = false
-
-[dependencies.multi-party-ecdsa]
-git = "https://github.com/ZenGo-X/multi-party-ecdsa"
-tag = "v0.7.1"
-#branch = "master"
 
 [dependencies.web3-core]
 git = "https://github.com/tmpfs/web3-core"
 branch = "main"
 
+[dependencies.multi-party-ecdsa]
+git = "https://github.com/ZenGo-X/multi-party-ecdsa"
+branch = "master"
+default-features = false
+
+[patch.'https://github.com/ZenGo-X/multi-party-ecdsa']
+multi-party-ecdsa = { git = "https://github.com/Bonnai2112/multi-party-ecdsa", branch = "bump-curv-zen-dependencies" }
